[package]
name = "persistent-storage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.14", features = ["full"] }
prost = "0.9.0"
structopt = "0.3.25"
thiserror = "1.0.30"
libc = "0.2.108"
bytes = "1"

[build-dependencies]
prost-build = "0.9.0"